<?xml version="1.0"?>
<package>
  <name>scurve_traj_gen</name>
  <version>1.0.0</version>
  <description>The scurve_traj_gen package</description>

  <maintainer email="dasilva@isir.upmc.fr">Jimmy Da Silva</maintainer>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
